[gd_scene load_steps=6 format=3 uid="uid://cytb3b6y8kqk4"]

[ext_resource type="Script" path="res://scenes/ui/battle_reward_panel.gd" id="1_y4xqw"]
[ext_resource type="PackedScene" uid="uid://cochhv1ryv7bf" path="res://scenes/ui/choose_item_panel.tscn" id="2_vhuiu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6bll"]
bg_color = Color(0, 0, 0, 0.360784)

[sub_resource type="LabelSettings" id="LabelSettings_ewbyo"]

[sub_resource type="LabelSettings" id="LabelSettings_52iul"]
font_size = 12

[node name="BattleRewardPanel" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s6bll")
script = ExtResource("1_y4xqw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -32.5
offset_right = 74.0
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Wave cleaned"
label_settings = SubResource("LabelSettings_ewbyo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose reward"
label_settings = SubResource("LabelSettings_52iul")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardRewardsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="ChooseItemPanel" parent="VBoxContainer/CardRewardsContainer" instance=ExtResource("2_vhuiu")]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "next wave"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
